syntax = "proto3";
package proto.triton;

message BasicSkill {
  int32 id = 1;
  oneof command {
    MatchVelocity match_velocity = 2;
    MoveToPoint move_to_point = 3;
    Kick kick = 4;
    Dribble dribble = 5;
  }
}

message MatchVelocity {
  float vx = 1;
  float vy = 2;
  float angular = 3;
}

message MoveToPoint {
  float x = 1;
  float y = 2;
  float orientation = 3;
}

message Kick {
  bool chip = 1;
}

message Dribble {
  bool dribble_on = 1;
}